--- a/data_plotter/config.yaml
+++ b/data_plotter/config.yaml
@@ -1,4 +1,4 @@
-data_folder_path: Live_Data/june_17_run1
+data_folder_path: Live_Data/june_19_test
 processed_data_path: Processed_Data
 graph_update_interval: 1000
 serial_port: COM3
